2003-08-20  Akim Demaille  <akim@epita.fr>

	* lib/Automake/FileUtils.pm: More perldoc.
	(&up_to_date_p): New.

2003-08-17  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix for PR automake/398:
	* m4/python.m4: Do not call AC_PATH_PROGS if $PYTHON is already
	set.  Display `none' instead of `:' and $PYTHON is set to `:'
	when no suitable interpreter is found.  Honor ACTION-IF-FOUND and
	ACTION-IF-NOT-FOUND.
	* automake.texi (Python): Document ACTION-IF-FOUND and
	ACTION-IF-NOT-FOUND.
	* tests/python4.test, tests/python5.test, tests/python6.test,
	tests/python7.test, tests/python8.test, tests/python9.test: New
	files.
	* tests/Makefile.am (TESTS): Add them.
	Report from Per Cederqvist.

2003-08-13  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix for PR automake/399:
	* m4/python.m4: Use AC_PATH_PROGS, not AC_PATH_PROG.
	Report from Per Cederqvist.

2003-08-12  Raja R Harinath  <harinath@acm.org>

	* lib/Automake/Condition.pm (strip): Replace loop with 'grep'.
	(not): Replace loop with 'map'.
	* lib/Automake/DisjConditions.pm (sub_conditions): Likewise.
	* lib/Automake/Item.pm (not_alwasy_defined_in_cond):
	Don't 'simplify' result of 'invert', since it's already in
	canonical form.
	* lib/Automake/Rule.pm (define): Replace loop with
	'not_always_defined_in_cond'.

	* lib/Automake/DisjConditions.pm (ambiguous_p): Typo in comment.
	* lib/Automake/Rule.pm (accept_extensions, msg_cond_rule): Likewise.
	(define): Reword comment slightly.
	* Variable.pm (_var_order, msg_cond_var): Typo in comment.
	* tests/cond20.test (var2): Use foo.c instead of foo.cc to avoid
	spurious automake error exit.

2003-08-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Item.pm, lib/Automake/ItemDef.pm: New files.
	* lib/Automake/Rule.pm, lib/Automake/RuleDef.pm: New files.
	* lib/Automake/Makefile.am (dist_perllib_DATA): Add them.
	* lib/Automake/VarDef.pm: Make this a subclass of Automake::ItemDef.
	(new): Adjust to call Automake::ItemDef::new.