@@ -179,6 +179,9 @@ my %_ac_macro_for_var =
    YACC => 'AC_PROG_YACC',
    );
 
+# The name of the configure.ac file.
+my $configure_ac = require_configure_ac;
+
 # Variables that can be overriden without complaint from -Woverride
 my %_silent_variable_override =
   (AR => 1,
