@@ -1,3 +1,12 @@
+2003-08-21  Akim Demaille  <akim@epita.fr>
+
+	* lib/Automake/Configure_ac.pm (&find_configure_ac)
+	(&require_configure_ac): Accept an optional directory argument.
+	($configure_ac): Remove.
+	* aclocal.in, automake.in ($configure_ac): New.
+	* lib/Automake/Variable.pm: Don't use $configure_ac, just
+	configure.ac.
+
 2003-08-20  Akim Demaille  <akim@epita.fr>
 
 	* lib/Automake/FileUtils.pm: More perldoc.
